--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,3 +48,8 @@ services:
       - app2
     ports:
       - "9999:9999"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: '0.5GB'
